--- a/omc.properties
+++ b/omc.properties
@@ -1,5 +1,6 @@
 #
 # omc.properties contains sensitive username and password attributes so it is recommended to restrict access appropriately
+# the file should be placed into ${HOME}/.omc
 #
 
 # OCI_TENANT_NAME is name of your cloud account, this is the name of the account you used when 
